Tạo style cho header

--- a/scss/theme/_theme.scss
+++ b/scss/theme/_theme.scss
@@ -7,6 +7,10 @@ $secondary: #fb4226;
 //-----COLORS TEXT------
 $textPrimary: #4a4a4a;
 $textSecondary: #fa5238;
+$textBlack: #000000;
+$textGrey: #9b9b9b;
+$textLightGrey: #e9e9e9;
+$textWhite: #ffffff;
 
 //-------FONT SIZE-------
 $body1: 12px;
