--- a/css/home.css
+++ b/css/home.css
@@ -6,10 +6,141 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #4a4a4a;
   background-color: #ffffff;
   font-weight: 400;
   line-height: 1.4;
+}
+
+.mynavbar {
+  position: fixed;
+  top: -1px;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  background-color: rgba(255, 255, 255, 0.95);
+  -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+  z-index: 9;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.mynavbar .navbar-brand img {
+  width: 50px;
+}
+
+.mynavbar .center {
+  margin-left: 260px;
+}
+
+.mynavbar .center .nav-item .nav-link {
+  font-size: 14px;
+  font-weight: 600;
+  color: #000000;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  margin-right: 25px;
+  padding: 0;
+}
+
+.mynavbar .center .nav-item .nav-link:hover {
+  color: #fa5238;
+}
+
+.mynavbar .right .nav-link {
+  border-right: solid 1px #e9e9e9;
+  padding: 0 11px 0 0;
+}
+
+.mynavbar .right .nav-link img {
+  width: 30px;
+  border-radius: 50%;
+}
+
+.mynavbar .right .nav-link span {
+  margin-left: 5px;
+  font-size: 13px;
+  font-weight: 400;
+  color: #9b9b9b;
+}
+
+.mynavbar .right .location {
+  position: relative;
+}
+
+.mynavbar .right .location__icon {
+  position: absolute;
+  top: 19px;
+  right: 157px;
+  pointer-events: none;
+  z-index: 1;
+}
+
+.s-hidden {
+  visibility: hidden;
+  padding-right: 10px;
+}
+
+.select {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  padding-left: 22px;
+  font-size: 13px;
+  font-weight: 400;
+  color: #9b9b9b;
+}
+
+.styledSelect {
+  position: absolute;
+  top: 6px;
+  right: 0;
+  bottom: 0;
+  left: 33px;
+  padding: 0px;
+  font-weight: bold;
+}
+
+.styledSelect:after {
+  content: "";
+  border: 5px solid transparent;
+  border-color: black transparent transparent transparent;
+  position: absolute;
+  top: 6px;
+  right: 20px;
+}
+
+.options {
+  display: none;
+  position: absolute;
+  top: 150%;
+  right: 0;
+  left: 0;
+  z-index: 999;
+  min-width: 150px;
+  padding: 5px 0;
+  margin: 2px 0 0;
+  list-style: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: white;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+  max-height: 300px;
+  overflow-y: scroll;
+}
+
+.options li {
+  padding: 3px 20px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #000000;
+}
+
+.options li:hover {
+  background-color: #39f;
+  color: white;
 }
 /*# sourceMappingURL=home.css.map */
