--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: $textPrimary;
   background-color: $primary;
   font-weight: $fwRegular;
