--- a/scss/page/home/home.scss
+++ b/scss/page/home/home.scss
@@ -2,3 +2,7 @@
 @import "../../base/reset";
 @import "../../helper/function";
 @import "../../helper/mixin";
+
+@import "../../layout/header";
+
+@import "../../component/select";
