--- a/css/home.css
+++ b/css/home.css
@@ -49,6 +49,12 @@ body {
   color: #fa5238;
 }
 
+.mynavbar .right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .mynavbar .right .nav-link {
   border-right: solid 1px #e9e9e9;
   padding: 0 11px 0 0;
@@ -66,16 +72,66 @@ body {
   color: #9b9b9b;
 }
 
-.mynavbar .right .location {
-  position: relative;
-}
-
 .mynavbar .right .location__icon {
   position: absolute;
   top: 19px;
   right: 157px;
   pointer-events: none;
   z-index: 1;
+}
+
+.mynavbar .collapse:not(.show) {
+  display: none !important;
+}
+
+.mynavbar .mycollapse {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+}
+
+.mynavbar .mycollapse .collapse-menu {
+  background-color: #ffffff;
+  min-width: 150px;
+  -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  overflow-y: scroll;
+  height: 300px;
+}
+
+.mynavbar .mycollapse .collapse-menu .nav-link {
+  font-size: 14px;
+  font-weight: 400;
+  color: #000000;
+  border-right: solid 1px #e9e9e9;
+  padding: 8px 16px;
+}
+
+.mynavbar .mycollapse .collapse-menu .nav-link img {
+  width: 30px;
+  border-radius: 50%;
+}
+
+.mynavbar .mycollapse .collapse-menu a {
+  font-size: 16px;
+  font-weight: 400;
+  color: #000000;
+  padding: 15px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+@media screen and (max-width: 992px) {
+  .mynavbar .center {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .mynavbar .right {
+    display: none;
+  }
 }
 
 .s-hidden {
@@ -142,5 +198,30 @@ body {
 .options li:hover {
   background-color: #39f;
   color: white;
+}
+
+.close-collapse {
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 400;
+  margin: 10px 10px;
+  padding: 5px 5px;
+  background-color: #fb4226;
+  border: 1px solid #fb4226;
+  width: 35px;
+  height: 35px;
+  line-height: 25px;
+  border-radius: 50%;
+}
+
+.close-collapse:hover {
+  color: #ffffff;
+  background-color: #fb4226;
+  border-color: #fb4226;
+}
+
+.close-collapse:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 /*# sourceMappingURL=home.css.map */
