--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -31,6 +31,8 @@
   }
 
   .right {
+    display: flex;
+
     .nav-link {
       border-right: solid 1px $textLightGrey;
       padding: 0 spacing(1.1) 0 0;
@@ -45,16 +47,60 @@
       }
     }
 
-    .location {
-      position: relative;
+    .location__icon {
+      position: absolute;
+      top: 19px;
+      right: 157px;
+      pointer-events: none;
+      z-index: 1;
+    }
+  }
 
-      &__icon {
-        position: absolute;
-        top: 19px;
-        right: 157px;
-        pointer-events: none;
-        z-index: 1;
+  .collapse:not(.show) {
+    display: none !important;
+  }
+
+  .mycollapse {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+
+    .collapse-menu {
+      background-color: $primary;
+      min-width: 150px;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      overflow-y: scroll;
+      height: 300px;
+
+      .nav-link {
+        @include text($subtitle1, $textBlack, $fwRegular);
+        border-right: solid 1px $textLightGrey;
+        padding: spacing(0.8) spacing(1.6);
+        img {
+          width: 30px;
+          border-radius: 50%;
+        }
       }
+
+      a {
+        @include text($subtitle2, $textBlack, $fwRegular);
+        padding: spacing(1.5) spacing(1.6);
+        text-decoration: none;
+        display: block;
+      }
+    }
+  }
+
+  @include responsive-for("large") {
+    .center {
+      display: none;
+    }
+  }
+
+  @include responsive-for("small") {
+    .right {
+      display: none;
     }
   }
 }
