Hoàn thành design và repsonsive cho slider (home)

--- a/scss/page/home/home.scss
+++ b/scss/page/home/home.scss
@@ -5,6 +5,8 @@
 
 @import "../../layout/header";
 
+@import "../../page/home/slider";
+
 @import "../../component/select";
 
 @import "../../component/button";
