--- a/css/home.css
+++ b/css/home.css
@@ -11,6 +11,7 @@ body {
   background-color: #ffffff;
   font-weight: 400;
   line-height: 1.4;
+  overflow-x: hidden;
 }
 
 .mynavbar {
@@ -131,6 +132,90 @@ body {
 @media screen and (max-width: 576px) {
   .mynavbar .right {
     display: none;
+  }
+}
+
+.slider {
+  margin-top: 60px;
+}
+
+.slider .carousel {
+  width: 100vw;
+}
+
+.slider .carousel-indicators {
+  margin-bottom: 2rem;
+}
+
+.slider .carousel-indicators li {
+  width: 12px;
+  height: 12px;
+  display: inline-block;
+  background: #ffffff;
+  border: none;
+  border-radius: 50%;
+  margin: 0px 5px;
+  opacity: 1;
+}
+
+.slider .carousel-indicators li.active {
+  background: #fb4226;
+}
+
+.slider .carousel-item img {
+  -o-object-fit: fill;
+     object-fit: fill;
+  overflow: hidden;
+}
+
+.slider .carousel-control-prev {
+  position: absolute;
+  width: 5%;
+  top: 0;
+  left: 0;
+  background-color: transparent;
+  border: none;
+  z-index: 2;
+  opacity: 0.5;
+}
+
+.slider .carousel-control-prev-icon {
+  background-image: url(../../../img/back-session.png) !important;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 50px;
+  height: 100px;
+}
+
+.slider .carousel-control-next {
+  position: absolute;
+  width: 5%;
+  top: 0;
+  right: 0px;
+  background-color: transparent;
+  border: none;
+  z-index: 2;
+  opacity: 0.5;
+}
+
+.slider .carousel-control-next-icon {
+  background-image: url(../../../img/next-session.png) !important;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 50px;
+  height: 100px;
+}
+
+@media screen and (max-width: 576px) {
+  .slider .carousel-indicators {
+    margin-bottom: 1rem;
+  }
+  .slider .carousel-indicators li {
+    width: 10px;
+    height: 10px;
+    margin: 0px 5px;
   }
 }
 
