--- a/scss/page/home/home.scss
+++ b/scss/page/home/home.scss
@@ -6,7 +6,9 @@
 @import "../../layout/header";
 
 @import "../../page/home/slider";
+@import "../../page/home/buyticket";
 
+@import "../../component/container";
 @import "../../component/select";
 
 @import "../../component/button";
