--- a/scss/theme/_theme.scss
+++ b/scss/theme/_theme.scss
@@ -3,6 +3,8 @@
 //-----COLORS BACKGROUND------
 $primary: #ffffff;
 $secondary: #fb4226;
+$lightGrey: #e9e9e9;
+$darkGrey: #4a4a4a;
 
 //-----COLORS TEXT------
 $textPrimary: #4a4a4a;
