--- a/css/home.css
+++ b/css/home.css
@@ -307,6 +307,12 @@ body {
   width: 17%;
 }
 
+@media screen and (max-width: 992px) {
+  .buy-ticket {
+    display: none;
+  }
+}
+
 .mycontainer {
   max-width: 1000px;
   margin: 0 auto;
