--- a/scss/page/home/home.scss
+++ b/scss/page/home/home.scss
@@ -7,8 +7,11 @@
 
 @import "../../page/home/slider";
 @import "../../page/home/buyticket";
+@import "../../page/home/film_block";
 
 @import "../../component/container";
 @import "../../component/select";
 
 @import "../../component/button";
+
+@import "../../base/customize";
