--- a/scss/theme/_theme.scss
+++ b/scss/theme/_theme.scss
@@ -5,6 +5,7 @@ $primary: #ffffff;
 $secondary: #fb4226;
 $lightGrey: #e9e9e9;
 $darkGrey: #4a4a4a;
+$black: #000000;
 
 //-----COLORS TEXT------
 $textPrimary: #4a4a4a;
@@ -18,7 +19,7 @@ $textWhite: #ffffff;
 $body1: 12px;
 $body2: 13px;
 $subtitle1: 14px;
-$subtitle2: 16px;
+$subtitle2: 15px;
 $h6: 16px;
 $h5: 18px;
 $h4: 24px;
