--- a/css/home.css
+++ b/css/home.css
@@ -23,7 +23,7 @@ body {
   background-color: rgba(255, 255, 255, 0.95);
   -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
           box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-  z-index: 9;
+  z-index: 999;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
@@ -140,7 +140,7 @@ body {
 }
 
 .mynavbar .mycollapse .collapse-menu a {
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 400;
   color: #000000;
   padding: 15px 16px;
@@ -313,8 +313,206 @@ body {
   }
 }
 
+.film-block {
+  padding-top: 100px;
+  position: relative;
+}
+
+.film-block .nav-tabs {
+  border: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  margin-bottom: 45px;
+}
+
+.film-block .nav-tabs .nav-link {
+  border: none;
+  font-size: 20px;
+  font-weight: 400;
+  color: #000000;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.film-block .nav-tabs .nav-link.active {
+  font-size: 24px;
+  font-weight: 400;
+  color: #fa5238;
+}
+
+.film-block .nav-tabs .nav-link:hover {
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.film-block .film-container .film-item {
+  position: relative;
+  padding: 0 10px;
+  margin-bottom: 30px;
+}
+
+.film-block .film-container .film-item .trailer {
+  position: relative;
+}
+
+.film-block .film-container .film-item .trailer img {
+  border-radius: 5px;
+  width: 100%;
+}
+
+.film-block .film-container .film-item .trailer .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: -webkit-gradient(linear, left bottom, left top, from(#000000), color-stop(80%, transparent));
+  background: linear-gradient(to top, #000000, transparent 80%);
+  border-radius: 5px;
+  opacity: 0;
+  z-index: 2;
+}
+
+.film-block .film-container .film-item .trailer .trailer-play {
+  position: absolute;
+  border: solid 1.5px #ffffff;
+  border-radius: 50%;
+  top: 41%;
+  left: 39%;
+  width: 55px;
+  height: 55px;
+  font-size: 13px;
+  font-weight: 700;
+  color: #ffffff;
+  line-height: 55px;
+  text-align: center;
+  opacity: 0;
+  z-index: 2;
+}
+
+.film-block .film-container .film-item .trailer .trailer-play:hover {
+  opacity: 0.6 !important;
+}
+
+.film-block .film-container .film-item .film-title {
+  height: 42px;
+  max-height: 42px;
+  font-size: 16px;
+  font-weight: 700;
+  color: #000000;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  margin: 10px 0;
+}
+
+.film-block .film-container .film-item .film-title span {
+  font-size: 14px;
+  font-weight: 700;
+  color: #ffffff;
+  font-size: 14px;
+  background-color: #fb4226;
+  border-radius: 4px;
+  padding: 0 5px;
+  min-width: 33px;
+  text-align: center;
+  display: inline-block;
+  margin-right: 8px;
+}
+
+.film-block .film-container .film-item .film-time {
+  font-size: 13px;
+  font-weight: 400;
+  color: #4a4a4a;
+  margin-bottom: 15px;
+  margin-top: 8px;
+}
+
+.film-block .film-container .film-item .film-rating {
+  position: absolute;
+  background-color: rgba(12, 27, 54, 0.8);
+  border: 1px solid #1f2e46;
+  border-radius: 4px;
+  padding: 2px;
+  position: absolute;
+  top: 12px;
+  right: 25px;
+  width: 54px;
+  text-align: center;
+  line-height: 1.1;
+}
+
+.film-block .film-container .film-item .film-rating .film-point {
+  font-size: 16px;
+  font-weight: 700;
+  color: #ffffff;
+  margin-bottom: 7px;
+  text-align: center;
+  line-height: 1.1;
+}
+
+.film-block .film-container .film-item .film-rating .rating__stars {
+  font-size: 6px;
+  font-weight: 400;
+  color: #fa5238;
+  margin-bottom: 5px;
+}
+
+.film-block .film-container .film-item .film-date {
+  position: absolute;
+  font-size: 16px;
+  font-weight: 700;
+  color: #ffffff;
+  background-color: rgba(12, 27, 54, 0.8);
+  border: 1px solid #1f2e46;
+  border-radius: 4px;
+  padding: 5px;
+  position: absolute;
+  top: 265px;
+  right: 20px;
+  width: 54px;
+  text-align: center;
+  line-height: 1.1;
+  z-index: 3;
+}
+
+.film-block .film-container .film-item .ticket-buy {
+  display: none;
+}
+
+.film-block .film-container .film-item .blockbluster {
+  position: absolute;
+  top: -25px;
+  left: -7px;
+  width: 60%;
+  z-index: 3;
+}
+
+.film-block .film-container .film-item:hover {
+  cursor: pointer;
+}
+
+.film-block .film-container .film-item:hover .trailer .overlay,
+.film-block .film-container .film-item:hover .trailer .trailer-play {
+  opacity: 1;
+}
+
+.film-block .film-container .film-item:hover .film-title,
+.film-block .film-container .film-item:hover .film-time {
+  display: none;
+}
+
+.film-block .film-container .film-item:hover .ticket-buy {
+  display: block;
+}
+
 .mycontainer {
-  max-width: 1000px;
+  max-width: 940px;
   margin: 0 auto;
 }
 
@@ -370,7 +568,7 @@ body {
 
 .close-collapse {
   color: #ffffff;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 400;
   margin: 10px 10px;
   padding: 5px 5px;
@@ -393,7 +591,7 @@ body {
           box-shadow: none;
 }
 
-.ticket-buy {
+.ticket-buy-now {
   color: #ffffff;
   font-size: 14px;
   font-weight: 400;
@@ -403,14 +601,82 @@ body {
   border: 1px solid #4a4a4a;
 }
 
-.ticket-buy:hover {
+.ticket-buy-now:hover {
   color: #ffffff;
   background-color: #4a4a4a;
   border-color: #4a4a4a;
 }
 
+.ticket-buy-now:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.ticket-buy {
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 700;
+  margin: 10px 0px;
+  padding: 10px 25px;
+  background-color: #fb4226;
+  border: 1px solid #fb4226;
+  width: 100%;
+}
+
+.ticket-buy:hover {
+  color: #ffffff;
+  background-color: #fb4226;
+  border-color: #fb4226;
+}
+
 .ticket-buy:focus {
   -webkit-box-shadow: none;
           box-shadow: none;
+}
+
+.owl-carousel {
+  margin: 0px 2px;
+}
+
+.owl-carousel .owl-nav {
+  display: block !important;
+}
+
+.owl-carousel .owl-nav .owl-prev,
+.owl-carousel .owl-nav .owl-next {
+  position: absolute;
+  top: 39%;
+  width: 50px;
+  height: 50px;
+  border: none;
+  background: transparent;
+  background-size: cover !important;
+  outline: none !important;
+  opacity: 0.6;
+  cursor: pointer;
+}
+
+.owl-carousel .owl-nav .owl-prev:hover,
+.owl-carousel .owl-nav .owl-next:hover {
+  background: transparent;
+}
+
+.owl-carousel .owl-nav .owl-prev span,
+.owl-carousel .owl-nav .owl-next span {
+  display: none;
+}
+
+.owl-carousel .owl-nav .owl-prev {
+  left: -8%;
+  background-image: url(../../img/back-session.png) !important;
+}
+
+.owl-carousel .owl-nav .owl-next {
+  right: -8%;
+  background-image: url(../../img/next-session.png) !important;
+}
+
+.owl-carousel .owl-dot {
+  display: none !important;
 }
 /*# sourceMappingURL=home.css.map */
