--- a/scss/page/home/_film_block.scss
+++ b/scss/page/home/_film_block.scss
@@ -144,8 +144,8 @@
 
       .blockbluster {
         position: absolute;
-        top: -25px;
-        left: -7px;
+        top: -6%;
+        left: -3%;
         width: 60%;
         z-index: 3;
       }
