Hoàn thành html và style cho phần showingfilme (Home)

--- a/scss/page/home/home.scss
+++ b/scss/page/home/home.scss
@@ -8,6 +8,7 @@
 @import "../../page/home/slider";
 @import "../../page/home/buyticket";
 @import "../../page/home/film_block";
+@import "../../page/home/showing_film";
 
 @import "../../component/container";
 @import "../../component/select";
