--- a/scss/theme/_theme.scss
+++ b/scss/theme/_theme.scss
@@ -14,6 +14,9 @@ $textBlack: #000000;
 $textGrey: #9b9b9b;
 $textLightGrey: #e9e9e9;
 $textWhite: #ffffff;
+$textDarkGreen: #108f3e;
+$textGreen: #8bc541;
+$textRed: #fb4226;
 
 //-------FONT SIZE-------
 $body1: 12px;
