--- a/css/home.css
+++ b/css/home.css
@@ -569,6 +569,234 @@ body {
   }
 }
 
+.showing-film .grey-margin {
+  height: 100px;
+  background-image: url(../../../img/back-news.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.showing-film .showing-detail .type-list {
+  min-height: 705px;
+  width: 10%;
+  float: left;
+  border: 1px solid #e9e9e9;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.showing-film .showing-detail .type-list .type-item {
+  list-style: none;
+}
+
+.showing-film .showing-detail .type-list .type-item.active a img, .showing-film .showing-detail .type-list .type-item:hover a img {
+  opacity: 1;
+}
+
+.showing-film .showing-detail .type-list .type-item a {
+  position: relative;
+  display: block;
+  padding: 20px;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  cursor: pointer;
+}
+
+.showing-film .showing-detail .type-list .type-item a img {
+  width: 100%;
+  opacity: 0.5;
+}
+
+.showing-film .showing-detail .type-list .type-item a::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: calc(100% - 40px);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  border-bottom: 1px solid rgba(238, 238, 238, 0.88);
+}
+
+.showing-film .showing-detail .cinemas {
+  min-height: 705px;
+  max-height: 170px;
+  border: 1px solid #e9e9e9;
+  border-left: none;
+  width: 30%;
+  overflow-y: hidden;
+}
+
+.showing-film .showing-detail .cinemas .cinema-info {
+  padding: 15px;
+  padding-top: 20px;
+  cursor: pointer;
+  position: relative;
+  opacity: 0.5;
+}
+
+.showing-film .showing-detail .cinemas .cinema-info.active, .showing-film .showing-detail .cinemas .cinema-info:hover {
+  opacity: 1;
+}
+
+.showing-film .showing-detail .cinemas .cinema-info img {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+.showing-film .showing-detail .cinemas .cinema-info .cinema-detail > span {
+  display: block;
+}
+
+.showing-film .showing-detail .cinemas .cinema-info .cinema-detail .cinema-name {
+  font-size: 14px;
+  font-weight: 600;
+  color: #000000;
+}
+
+.showing-film .showing-detail .cinemas .cinema-info .cinema-detail .cinema-name .cinema-type {
+  font-size: 14px;
+  font-weight: 600;
+  color: #8bc541;
+}
+
+.showing-film .showing-detail .cinemas .cinema-info .cinema-detail .address {
+  font-size: 12px;
+  font-weight: 400;
+  color: #9b9b9b;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.showing-film .showing-detail .cinemas .cinema-info .cinema-detail .red-detail {
+  font-size: 12px;
+  font-weight: 600;
+  color: #fb4226;
+  text-decoration: none;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.showing-film .showing-detail .cinemas .cinema-info::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: calc(100% - 40px);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  border-bottom: 1px solid #fff;
+  border-color: rgba(238, 238, 238, 0.88);
+}
+
+.showing-film .showing-detail .films {
+  min-height: 705px;
+  max-height: 170px;
+  border: 1px solid #e9e9e9;
+  border-left: none;
+  overflow-y: scroll;
+  width: 60%;
+}
+
+.showing-film .showing-detail .films .film {
+  padding: 15px;
+  padding-top: 20px;
+  position: relative;
+}
+
+.showing-film .showing-detail .films .film .film-info {
+  cursor: pointer;
+}
+
+.showing-film .showing-detail .films .film .film-info img {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+.showing-film .showing-detail .films .film .film-info .film-detail > span {
+  display: block;
+}
+
+.showing-film .showing-detail .films .film .film-info .film-detail .film-name {
+  font-size: 14px;
+  font-weight: 600;
+  color: #000000;
+}
+
+.showing-film .showing-detail .films .film .film-info .film-detail .film-name .film-label {
+  font-size: 14px;
+  font-weight: 700;
+  color: #ffffff;
+  font-size: 14px;
+  background-color: #fb4226;
+  border-radius: 4px;
+  padding: 0 5px;
+  text-align: center;
+  display: inline-block;
+}
+
+.showing-film .showing-detail .films .film .film-info .film-detail .film-discription {
+  font-size: 12px;
+  font-weight: 400;
+  color: #9b9b9b;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin: 2px 0;
+}
+
+.showing-film .showing-detail .films .film .film-version {
+  font-size: 16px;
+  font-weight: 600;
+  color: #000000;
+  display: block;
+  margin-top: 15px;
+  margin-bottom: 5px;
+}
+
+.showing-film .showing-detail .films .film .film-duration {
+  font-size: 14px;
+  font-weight: 600;
+  color: #9b9b9b;
+  width: calc(25% - 10px);
+  font-size: 14px;
+  margin: 0 10px 10px 0;
+  padding: 5px 0;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  background-color: rgba(246, 246, 246, 0.5);
+  border-radius: 7px;
+  border: 1px solid #e4e4e4;
+}
+
+.showing-film .showing-detail .films .film .film-duration .start-time {
+  font-size: 18px;
+  font-weight: 600;
+  color: #108f3e;
+}
+
+.showing-film .showing-detail .films .film .film-duration .start-time:hover {
+  color: #fa5238;
+}
+
+.showing-film .showing-detail .films .film::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: calc(100% - 40px);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  border-bottom: 1px solid #fff;
+  border-color: rgba(238, 238, 238, 0.88);
+}
+
 .mycontainer {
   max-width: 940px;
   margin: 0 auto;
