--- a/css/home.css
+++ b/css/home.css
@@ -576,10 +576,18 @@ body {
   background-repeat: no-repeat;
 }
 
+.showing-film .showing-detail {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .showing-film .showing-detail .type-list {
   min-height: 705px;
-  width: 10%;
-  float: left;
+  width: 92px;
   border: 1px solid #e9e9e9;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
@@ -665,9 +673,6 @@ body {
   font-size: 12px;
   font-weight: 400;
   color: #9b9b9b;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .showing-film .showing-detail .cinemas .cinema-info .cinema-detail .red-detail {
@@ -742,9 +747,6 @@ body {
   font-size: 12px;
   font-weight: 400;
   color: #9b9b9b;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
   margin: 2px 0;
 }
 
@@ -761,7 +763,7 @@ body {
   font-size: 14px;
   font-weight: 600;
   color: #9b9b9b;
-  width: calc(25% - 10px);
+  width: 120px;
   font-size: 14px;
   margin: 0 10px 10px 0;
   padding: 5px 0;
@@ -795,6 +797,18 @@ body {
           transform: translateX(-50%);
   border-bottom: 1px solid #fff;
   border-color: rgba(238, 238, 238, 0.88);
+}
+
+@media screen and (max-width: 768px) {
+  .showing-film .showing-detail {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .showing-film {
+    display: none;
+  }
 }
 
 .mycontainer {
