--- a/scss/page/home/_showing_film.scss
+++ b/scss/page/home/_showing_film.scss
@@ -7,10 +7,12 @@
   }
 
   .showing-detail {
+    display: flex;
+    justify-content: space-between;
+
     .type-list {
       min-height: 705px;
-      width: 10%;
-      float: left;
+      width: 92px;
       border: 1px solid $lightGrey;
       border-top-left-radius: 4px;
       border-bottom-left-radius: 4px;
@@ -91,9 +93,6 @@
 
           .address {
             @include text($body1, $textGrey, $fwRegular);
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
           }
 
           .red-detail {
@@ -158,9 +157,6 @@
 
             .film-discription {
               @include text($body1, $textGrey, $fwRegular);
-              overflow: hidden;
-              text-overflow: ellipsis;
-              white-space: nowrap;
               margin: spacing(0.2) 0;
             }
           }
@@ -175,7 +171,7 @@
 
         .film-duration {
           @include text($subtitle1, $textGrey, $fwMedium);
-          width: calc(25% - 10px);
+          width: 120px;
           font-size: 14px;
           margin: 0 10px 10px 0;
           padding: 5px 0;
@@ -208,5 +204,15 @@
         }
       }
     }
+  }
+
+  @include responsive-for("medium") {
+    .showing-detail {
+      display: block;
+    }
+  }
+
+  @include responsive-for("extra-small") {
+    display: none;
   }
 }
