--- a/scss/page/home/home.scss
+++ b/scss/page/home/home.scss
@@ -12,7 +12,7 @@
 
 @import "../../component/container";
 @import "../../component/select";
-
 @import "../../component/button";
+@import "../../component/grey_margin";
 
 @import "../../base/customize";
