--- a/scss/page/home/home.scss
+++ b/scss/page/home/home.scss
@@ -9,10 +9,12 @@
 @import "../../page/home/buyticket";
 @import "../../page/home/film_block";
 @import "../../page/home/showing_film";
+@import "../../page/home/news";
 
 @import "../../component/container";
 @import "../../component/select";
 @import "../../component/button";
 @import "../../component/grey_margin";
+@import "../../component/facebook_icon";
 
 @import "../../base/customize";
