--- a/css/home.css
+++ b/css/home.css
@@ -322,36 +322,6 @@ body {
   position: relative;
 }
 
-.film-block .nav-tabs {
-  border: none;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  margin-bottom: 45px;
-}
-
-.film-block .nav-tabs .nav-link {
-  border: none;
-  font-size: 20px;
-  font-weight: 400;
-  color: #000000;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-}
-
-.film-block .nav-tabs .nav-link.active {
-  font-size: 24px;
-  font-weight: 400;
-  color: #fa5238;
-}
-
-.film-block .nav-tabs .nav-link:hover {
-  font-size: 24px;
-  cursor: pointer;
-}
-
 .film-block .film-container .film-item {
   position: relative;
   padding: 0 10px;
@@ -553,16 +523,6 @@ body {
 }
 
 @media screen and (max-width: 420px) {
-  .film-block .nav-tabs .nav-link {
-    font-size: 20px;
-    font-weight: 400;
-    color: #000000;
-    font-size: 14px;
-  }
-  .film-block .nav-tabs .nav-link.active,
-  .film-block .nav-tabs .nav-link:hover {
-    font-size: 18px;
-  }
   .film-block .film-container .film-item .film-date {
     top: 70%;
     right: 20%;
@@ -804,6 +764,124 @@ body {
   }
 }
 
+.news .big-news-item {
+  padding: 7px;
+}
+
+.news .big-news-item a {
+  text-decoration: none;
+}
+
+.news .big-news-item a img {
+  width: 100%;
+  border-radius: 5px;
+}
+
+.news .big-news-item a {
+  text-decoration: none;
+}
+
+.news .big-news-item a .big-new-title {
+  font-size: 16px;
+  font-weight: 600;
+  color: #000000;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 20px;
+  font-size: 16px;
+  -webkit-transition: color 0.2s;
+  transition: color 0.2s;
+  margin: 7px 0;
+}
+
+.news .big-news-item a .big-new-title:hover {
+  color: #fa5238;
+}
+
+.news .big-news-item .big-new-description {
+  font-size: 13px;
+  font-weight: 400;
+  color: #4a4a4a;
+  text-align: justify;
+  line-height: 19px;
+  letter-spacing: 0.17;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 15px;
+}
+
+.news .small-news-item {
+  padding: 7px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.news .small-news-item a {
+  text-decoration: none;
+}
+
+.news .small-news-item a img {
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
+  margin-right: 10px;
+}
+
+.news .small-news-item a {
+  text-decoration: none;
+}
+
+.news .small-news-item a .small-new-title {
+  font-size: 16px;
+  font-weight: 600;
+  color: #4a4a4a;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 20px;
+  -webkit-transition: color 0.2s;
+  transition: color 0.2s;
+  margin-bottom: 5px;
+  opacity: 0.7;
+}
+
+.news .small-news-item a .small-new-title:hover {
+  color: #fa5238;
+}
+
+.news .new-news {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0 -7px;
+}
+
+.news .old-news {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-self: space-between;
+  margin: 0 -7px;
+}
+
+.news .old-news .big-news-item,
+.news .old-news .small-news {
+  width: 33.33%;
+}
+
+.news .button-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 50px;
+}
+
 .mycontainer {
   max-width: 940px;
   margin: 0 auto;
@@ -927,11 +1005,61 @@ body {
           box-shadow: none;
 }
 
+.see-more {
+  color: #4a4a4a;
+  font-size: 14px;
+  font-weight: 600;
+  margin: 35px auto 2px;
+  padding: 7px 25px;
+  background-color: #ffffff;
+  border: 1px solid #4a4a4a;
+}
+
+.see-more:hover {
+  color: #ffffff;
+  background-color: #fb4226;
+  border-color: #fb4226;
+}
+
+.see-more:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
 .grey-margin {
   height: 100px;
   background-image: url(../../../img/back-news.png);
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.facebook-icon .like,
+.facebook-icon .comment {
+  display: inline-table;
+  margin-right: 25px;
+  cursor: pointer;
+}
+
+.facebook-icon .like img,
+.facebook-icon .comment img {
+  display: table-cell;
+  vertical-align: middle;
+  margin-right: 10px;
+  margin-top: 2px;
+  height: auto;
+  width: 18px;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.facebook-icon .like p,
+.facebook-icon .comment p {
+  font-size: 12px;
+  font-weight: 400;
+  color: #9b9b9b;
+  display: table-cell;
+  line-height: 1;
+  vertical-align: middle;
 }
 
 .owl-carousel {
@@ -984,6 +1112,49 @@ body {
   .owl-carousel .owl-nav .owl-prev,
   .owl-carousel .owl-nav .owl-next {
     display: none;
+  }
+}
+
+.nav-tabs {
+  border: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  margin-bottom: 45px;
+}
+
+.nav-tabs .nav-link {
+  border: none;
+  font-size: 20px;
+  font-weight: 400;
+  color: #000000;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.nav-tabs .nav-link.active {
+  font-size: 24px;
+  font-weight: 400;
+  color: #fa5238;
+}
+
+.nav-tabs .nav-link:hover {
+  font-size: 24px;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 420px) {
+  .nav-tabs .nav-tabs .nav-link {
+    font-size: 20px;
+    font-weight: 400;
+    color: #000000;
+    font-size: 14px;
+  }
+  .nav-tabs .nav-tabs .nav-link.active,
+  .nav-tabs .nav-tabs .nav-link:hover {
+    font-size: 18px;
   }
 }
 /*# sourceMappingURL=home.css.map */
