--- a/scss/base/_customize.scss
+++ b/scss/base/_customize.scss
@@ -40,20 +40,6 @@
     display: none !important;
   }
 
-  //   @include responsive-for("extra-large") {
-  //     .owl-nav {
-  //       .owl-prev {
-  //         top: 15%;
-  //         left: -3%;
-  //       }
-
-  //       .owl-next {
-  //         top: 15%;
-  //         right: -3%;
-  //       }
-  //     }
-  //   }
-
   @include responsive-for("large") {
     .owl-nav {
       .owl-prev,
@@ -62,128 +48,40 @@
       }
     }
   }
-
-  //   @include responsive-for("medium") {
-  //     .owl-nav {
-  //       .owl-prev {
-  //         top: 17%;
-  //         left: -4%;
-  //       }
-
-  //       .owl-next {
-  //         top: 17%;
-  //         right: -4%;
-  //       }
-  //     }
-  //   }
-
-  //   @include responsive-for("small") {
-  //     .owl-nav {
-  //       .owl-prev {
-  //         top: 20%;
-  //         left: -6%;
-  //       }
-
-  //       .owl-next {
-  //         top: 20%;
-  //         right: -6%;
-  //       }
-  //     }
-  //   }
 }
-// .owl-carousel {
-//   margin: spacing(0) spacing(0.2);
-//   .owl-nav {
-//     display: block !important;
 
-//     .owl-prev,
-//     .owl-next {
-//       position: absolute;
-//       top: 15%;
-//       left: -2.5%;
-//       width: 45px;
-//       height: 45px;
-//       border-radius: 50% !important;
-//       background-color: white !important;
-//       box-shadow: 0 2px 8px 2px rgba(146, 153, 165, 0.1);
-//       outline: none !important;
+.nav-tabs {
+  border: none;
+  justify-content: center;
+  align-content: center;
+  margin-bottom: spacing(4.5);
 
-//       span {
-//         @include text($h1, $textSecondary, $fwRegular);
-//         line-height: 0.7;
-//       }
+  .nav-link {
+    border: none;
+    @include text($h4 - 4px, $textBlack, $fwRegular);
+    transition: all 0.2s;
+  }
 
-//       &:hover {
-//         span {
-//           @include text($h1, $textGrey, $fwRegular);
-//           line-height: 0.7;
-//         }
-//       }
-//     }
+  .nav-link.active {
+    @include text($h4, $textSecondary, $fwRegular);
+  }
 
-//     .owl-next {
-//       left: unset;
-//       right: -2.5%;
-//     }
-//   }
+  .nav-link:hover {
+    font-size: $h4;
+    cursor: pointer;
+  }
 
-//   .owl-dot {
-//     display: none !important;
-//   }
+  @include responsive-for("extra-small") {
+    .nav-tabs {
+      .nav-link {
+        @include text($h4 - 4px, $textBlack, $fwRegular);
+        font-size: $subtitle1;
+      }
 
-//   @include responsive-for("extra-large") {
-//     .owl-nav {
-//       .owl-prev {
-//         top: 15%;
-//         left: -3%;
-//       }
-
-//       .owl-next {
-//         top: 15%;
-//         right: -3%;
-//       }
-//     }
-//   }
-
-//   @include responsive-for("large") {
-//     .owl-nav {
-//       .owl-prev {
-//         top: 17%;
-//         left: -3.5%;
-//       }
-
-//       .owl-next {
-//         top: 17%;
-//         right: -3.5%;
-//       }
-//     }
-//   }
-
-//   @include responsive-for("medium") {
-//     .owl-nav {
-//       .owl-prev {
-//         top: 17%;
-//         left: -4%;
-//       }
-
-//       .owl-next {
-//         top: 17%;
-//         right: -4%;
-//       }
-//     }
-//   }
-
-//   @include responsive-for("small") {
-//     .owl-nav {
-//       .owl-prev {
-//         top: 20%;
-//         left: -6%;
-//       }
-
-//       .owl-next {
-//         top: 20%;
-//         right: -6%;
-//       }
-//     }
-//   }
-// }
+      .nav-link.active,
+      .nav-link:hover {
+        font-size: $h5;
+      }
+    }
+  }
+}
