--- a/scss/page/home/_news.scss
+++ b/scss/page/home/_news.scss
@@ -4,6 +4,7 @@
 
     a {
       text-decoration: none;
+
       img {
         width: 100%;
         border-radius: 5px;
@@ -12,10 +13,14 @@
 
     a {
       text-decoration: none;
+
       .big-new-title {
         @include text($h6, $textBlack, $fwMedium);
         overflow: hidden;
         text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
         line-height: 20px;
         font-size: 16px;
         transition: color 0.2s;
@@ -32,9 +37,6 @@
       text-align: justify;
       line-height: 19px;
       letter-spacing: 0.17;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      margin-bottom: 15px;
     }
   }
 
@@ -60,6 +62,9 @@
         overflow: hidden;
         text-overflow: ellipsis;
         line-height: 20px;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
         transition: color 0.2s;
         margin-bottom: 5px;
         opacity: 0.7;
@@ -91,5 +96,20 @@
   .button-wrapper {
     display: flex;
     margin-bottom: spacing(5);
+  }
+
+  @include responsive-for("small") {
+    .new-news,
+    .old-news {
+      display: block;
+
+      .big-news-item,
+      .small-news {
+        width: 100%;
+      }
+      .small-news-item {
+        justify-content: start;
+      }
+    }
   }
 }
