Cập nhật reponsive cho phần showingfilm (Home)

--- a/scss/page/home/_showing_film.scss
+++ b/scss/page/home/_showing_film.scss
@@ -202,6 +202,12 @@
   @include responsive-for("medium") {
     .showing-detail {
       display: block;
+
+      .type-list,
+      .cinemas,
+      .films {
+        border: none;
+      }
     }
   }
 
