--- a/scss/page/home/home.scss
+++ b/scss/page/home/home.scss
@@ -10,6 +10,7 @@
 @import "../../page/home/film_block";
 @import "../../page/home/showing_film";
 @import "../../page/home/news";
+@import "../../page/home/app";
 
 @import "../../component/container";
 @import "../../component/select";
