--- a/scss/component/_button.scss
+++ b/scss/component/_button.scss
@@ -80,7 +80,8 @@
     $secondary,
     $secondary,
     none,
-    spacing(1) auto spacing(0),
+    spacing(1) spacing(18) spacing(1) spacing(0),
     spacing(0.7) spacing(2)
   );
+  min-width: spacing(25.5);
 }
