Hoàn thành html và style cho phần footer

--- a/scss/page/home/home.scss
+++ b/scss/page/home/home.scss
@@ -18,4 +18,5 @@
 @import "../../component/grey_margin";
 @import "../../component/facebook_icon";
 
+@import "../../layout/footer";
 @import "../../base/customize";
