--- a/scss/theme/_theme.scss
+++ b/scss/theme/_theme.scss
@@ -5,6 +5,7 @@ $primary: #ffffff;
 $secondary: #fb4226;
 $lightGrey: #e9e9e9;
 $darkGrey: #4a4a4a;
+$lightBlack: #222222;
 $black: #000000;
 
 //-----COLORS TEXT------
