--- a/css/home.css
+++ b/css/home.css
@@ -1236,6 +1236,105 @@ body {
   vertical-align: middle;
 }
 
+.myfooter {
+  background: #222222;
+  padding: 20px 0;
+}
+
+.myfooter .title {
+  font-size: 12px;
+  font-weight: 600;
+  color: #ffffff;
+  margin-bottom: 10px;
+}
+
+.myfooter .tix-footer-item a {
+  font-size: 12px;
+  font-weight: 700;
+  color: #9b9b9b;
+  display: block;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  line-height: 2.3;
+  text-decoration: none;
+}
+
+.myfooter .tix-footer-item a:hover {
+  color: #ffffff;
+}
+
+.myfooter .partner-footer .partner-line {
+  margin-bottom: 15px;
+}
+
+.myfooter .partner-footer .partner-line a img {
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  margin-right: 15px;
+}
+
+.myfooter .partner-footer .partner-line a img:hover {
+  opacity: 0.7;
+}
+
+.myfooter .app-social-footer {
+  text-align: center;
+}
+
+.myfooter .app-social-footer a img {
+  height: 30px;
+  width: auto;
+  margin: 5px;
+}
+
+.myfooter hr {
+  border-top: 1px solid #4a4a4a;
+  margin: 20px -15px;
+}
+
+.myfooter .img-left-footer {
+  padding: 0;
+}
+
+.myfooter .img-left-footer img {
+  border-radius: 8px;
+  width: 80px;
+  height: auto;
+}
+
+.myfooter .contact-footer p:nth-child(1) {
+  font-size: 12px;
+  font-weight: 600;
+  color: #ffffff;
+  line-height: 1.8;
+}
+
+.myfooter .contact-footer p {
+  line-height: 1.8;
+  color: #949494;
+  font-size: 12px;
+  font-weight: 400;
+  margin-bottom: 0;
+}
+
+.myfooter .contact-footer p a {
+  text-decoration: none;
+  color: #fa5238;
+  cursor: pointer;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.myfooter .img-right-footer {
+  padding: 0;
+}
+
+.myfooter .img-right-footer img {
+  width: 130px;
+  float: right;
+}
+
 .owl-carousel {
   margin: 0px 2px;
 }
