--- a/css/home.css
+++ b/css/home.css
@@ -1200,6 +1200,31 @@ body {
           box-shadow: none;
 }
 
+.close-login {
+  color: #ffffff;
+  font-size: 15px;
+  font-weight: 400;
+  margin: 10px 10px;
+  padding: 5px 5px;
+  background-color: #fb4226;
+  border: 1px solid #fb4226;
+  width: 35px;
+  height: 35px;
+  line-height: 25px;
+  border-radius: 50%;
+}
+
+.close-login:hover {
+  color: #ffffff;
+  background-color: #fb4226;
+  border-color: #fb4226;
+}
+
+.close-login:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
 .grey-margin {
   height: 100px;
   background-image: url(../../../img/back-news.png);
