--- a/scss/component/_button.scss
+++ b/scss/component/_button.scss
@@ -85,3 +85,24 @@
   );
   min-width: spacing(25.5);
 }
+
+.close-login {
+  @include button(
+    $subtitle2,
+    $fwRegular,
+    $textWhite,
+    $secondary,
+    $secondary,
+    $textWhite,
+    $secondary,
+    $secondary,
+    none,
+    spacing(1) spacing(1),
+    spacing(0.5) spacing(0.5)
+  );
+
+  width: 35px;
+  height: 35px;
+  line-height: 25px;
+  border-radius: 50%;
+}
