--- a/scss/theme/_theme.scss
+++ b/scss/theme/_theme.scss
@@ -7,6 +7,7 @@ $lightGrey: #e9e9e9;
 $darkGrey: #4a4a4a;
 $lightBlack: #222222;
 $black: #000000;
+$purple: #081630;
 
 //-----COLORS TEXT------
 $textPrimary: #4a4a4a;
