--- a/css/home.css
+++ b/css/home.css
@@ -1201,23 +1201,26 @@ body {
 }
 
 .close-login {
-  color: #ffffff;
+  color: #4a4a4a;
   font-size: 15px;
   font-weight: 400;
   margin: 10px 10px;
   padding: 5px 5px;
-  background-color: #fb4226;
-  border: 1px solid #fb4226;
+  background-color: #081630;
+  border: 1px solid #081630;
   width: 35px;
   height: 35px;
   line-height: 25px;
+  font-weight: 700;
   border-radius: 50%;
+  -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5);
+          box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5);
 }
 
 .close-login:hover {
-  color: #ffffff;
-  background-color: #fb4226;
-  border-color: #fb4226;
+  color: #4a4a4a;
+  background-color: #081630;
+  border-color: #081630;
 }
 
 .close-login:focus {
