--- a/css/login.css
+++ b/css/login.css
@@ -130,23 +130,26 @@ body {
 }
 
 .close-login {
-  color: #ffffff;
+  color: #4a4a4a;
   font-size: 15px;
   font-weight: 400;
   margin: 10px 10px;
   padding: 5px 5px;
-  background-color: #fb4226;
-  border: 1px solid #fb4226;
+  background-color: #081630;
+  border: 1px solid #081630;
   width: 35px;
   height: 35px;
   line-height: 25px;
+  font-weight: 700;
   border-radius: 50%;
+  -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5);
+          box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5);
 }
 
 .close-login:hover {
-  color: #ffffff;
-  background-color: #fb4226;
-  border-color: #fb4226;
+  color: #4a4a4a;
+  background-color: #081630;
+  border-color: #081630;
 }
 
 .close-login:focus {
@@ -155,9 +158,72 @@ body {
 }
 
 .background {
-  height: 1000px;
   background: url(../../../img/background-login.jpg);
   background-size: contain;
   background-position: center;
+  height: 100vh;
+  margin: 0 auto;
+  padding: 0 calc(50% - 430px);
+}
+
+.background .login {
+  max-width: 330px;
+  padding: 40px 40px 30px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(20, 50, 93, 0.9)), to(rgba(8, 22, 48, 0.9)));
+  background-image: linear-gradient(to bottom, rgba(20, 50, 93, 0.9), rgba(8, 22, 48, 0.9));
+  -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.45);
+          box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.45);
+  text-align: center;
+  border-radius: 6px;
+}
+
+.background .login > img {
+  width: 209px;
+  margin-bottom: 96px;
+  cursor: pointer;
+  vertical-align: middle;
+}
+
+.background .login p {
+  font-size: 14px;
+  font-weight: 600;
+  color: #ffffff;
+  line-height: 1.42857143;
+  color: white;
+  margin-bottom: 0;
+}
+
+.background .login a {
+  text-decoration: none;
+  cursor: pointer;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.background .login a img {
+  width: 100%;
+  cursor: pointer;
+  margin-top: 15px;
+}
+
+.background .login .close-login {
+  position: absolute;
+  top: -25px;
+  right: -25px;
+}
+
+@media screen and (max-width: 420px) {
+  .background .login {
+    width: 100%;
+    max-width: none;
+  }
+  .background .login .close-login {
+    right: 0;
+  }
 }
 /*# sourceMappingURL=login.css.map */
