--- a/scss/page/home/login.scss
+++ b/scss/page/home/login.scss
@@ -6,8 +6,68 @@
 @import "../../component/button";
 
 .background {
-  height: 1000px;
   background: url(../../../img/background-login.jpg);
   background-size: contain;
   background-position: center;
+  height: 100vh;
+  margin: 0 auto;
+  padding: 0 calc(50% - 430px);
+
+  .login {
+    max-width: 330px;
+    padding: 40px 40px 30px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-image: linear-gradient(
+      to bottom,
+      rgba(20, 50, 93, 0.9),
+      rgba(8, 22, 48, 0.9)
+    );
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.45);
+    text-align: center;
+    border-radius: 6px;
+
+    > img {
+      width: 209px;
+      margin-bottom: 96px;
+      cursor: pointer;
+      vertical-align: middle;
+    }
+
+    p {
+      @include text($subtitle1, $textWhite, $fwMedium);
+      line-height: 1.42857143;
+      color: white;
+      margin-bottom: 0;
+    }
+
+    a {
+      text-decoration: none;
+      cursor: pointer;
+      transition: all 0.2s;
+
+      img {
+        width: 100%;
+        cursor: pointer;
+        margin-top: 15px;
+      }
+    }
+
+    .close-login {
+      position: absolute;
+      top: -25px;
+      right: -25px;
+    }
+
+    @include responsive-for("extra-small") {
+      width: 100%;
+      max-width: none;
+
+      .close-login {
+        right: 0;
+      }
+    }
+  }
 }
